--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,5 @@
-aws:
-  region: us-east-1
+spring:
+  data:
+    mongodb:
+      uri: mongodb+srv://camp:D0CfF9iHd5Aqw8sC@clustercamp.4y1vg.mongodb.net/test
+      database: meli
