--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'jacoco'
-    id 'org.sonarqube' version '3.0'
+    id 'org.sonarqube' version '3.3'
 }
 
 group = 'com.camp'
@@ -55,6 +55,9 @@ jacoco {
 
 sonarqube {
     properties {
+        property "sonar.projectKey", "charliepalacios9105_MagnetoDNASelector"
+        property "sonar.organization", "charliepalacios9105"
+        property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.sourceEnconding", "UTF-8"
         property "sonar.sources", "src,deployment,settings.gradle,main.gradle,build.gradle"
         property "sonar.test", "src/test"
