--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ jacoco {
     toolVersion = "0.8.5"
 }
 
+
 sonarqube {
     properties {
         property "sonar.projectKey", "charliepalacios9105_MagnetoDNASelector"
@@ -61,6 +62,6 @@ sonarqube {
         property "sonar.sourceEnconding", "UTF-8"
         property "sonar.test", "src/test"
         property "sonar.java.coveragePlugin", "jacoco"
-        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco.xml"
     }
 }
